# STRUMPACK

./: CMakeLists.txt
src/: CMakeLists.txt
src/BLR/: CMakeLists.txt
src/HODLR/: CMakeLists.txt
src/HSS/: CMakeLists.txt
src/clustering/: CMakeLists.txt
src/dense/: CMakeLists.txt
src/fortran/: CMakeLists.txt
src/iterative/: CMakeLists.txt
src/kernel/: CMakeLists.txt
src/misc/: CMakeLists.txt
src/python/: CMakeLists.txt
src/sparse/: CMakeLists.txt
src/structured/: CMakeLists.txt
src/structured/fortran/: CMakeLists.txt
